[tool.poetry]
name = "teslajsonpy"
version = "3.7.3"
description = "A library to work with Tesla API."
authors = ["Sergey Isachenko <sergey.isachenkol@bool.by>"]
license = "Apache-2.0"
repository = "https://github.com/zabuldon/teslajsonpy"
readme = "README.md"
homepage = "https://github.com/zabuldon/teslajsonpy"
documentation = "https://teslajsonpy.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
	"Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
include = [
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = ">=3.7.4"
tenacity = ">=8.1.0"
beautifulsoup4 = ">=4.9.3"
wrapt = ">=1.12.1"
authcaptureproxy = ">=1.1.3"
httpx = ">=0.17.1, <1.0"
orjson = ">=3.8.5"

[tool.poetry.dev-dependencies]
flake8 = ">=3.9.0"
mypy = ">=0.812"
black = ">=20.8b1"
Sphinx = ">=3.5.3"
autoapi = ">=2.0.1"
sphinx-rtd-theme = ">=0.5.1"
m2r2 = ">=0.3.1"
sphinx-autoapi = ">=1.7.0"
sphinx-copybutton = ">=0.3.1"
pydocstyle = ">=6.0.0"
pytest = ">=6.2.2"
coverage = ">=5.5"
tox = ">=3.23.0"
pytest-asyncio = ">=0.14.0"
pytest-cov = ">=2.11.1"
pylint = ">=2.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[metadata]
description-file = "README.md"

